--- a/.github/workflows/merge_conan_build.yml
+++ b/.github/workflows/merge_conan_build.yml
@@ -13,28 +13,8 @@ jobs:
       matrix:
         platform: ["ubuntu-22.04"]
         build-type: ["Debug", "Release"]
-        malloc-impl: ["libc", "tcmalloc", "jemalloc"]
+        malloc-impl: ["libc"]
         prerelease: ["True", "False"]
-        exclude:
-          - build-type: Debug
-            platform: ubuntu-20.04
-          - build-type: Debug
-            malloc-impl: tcmalloc
-          - malloc-impl: tcmalloc
-            platform: ubuntu-20.04
-          - malloc-impl: jemalloc
-            platform: ubuntu-20.04
-          - malloc-impl: jemalloc
-            build-type: Debug
-          - malloc-impl: jemalloc
-            prerelease: "False"
-          - malloc-impl: libc
-            build-type: Release
-            platform: ubuntu-22.04
-          - prerelease: "True"
-            platform: ubuntu-20.04
-          - prerelease: "False"
-            build-type: Debug
     uses: ./.github/workflows/build_commit.yml
     with:
       platform: ${{ matrix.platform }}
