--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.11)
 
 # add warning options
-add_flags("-Wall -Wextra -Werror -Wpedantic")
+add_flags("-Wall -Wextra -Werror -Wpedantic -Wno-unused-parameter")
 
 add_library(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE
