Depend on the real HomeObject. (#5)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(mock_homeobject PRIVATE
 		mock_shard_manager.cpp
 	)
 target_link_libraries(mock_homeobject
+    homeobject::homeobject
     nuobject_proto::nuobject_proto
     sisl::sisl
   )
