--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -107,34 +107,20 @@ jobs:
         key_prefix: IOMgrDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
-    - name: Load NuraftMsg Cache
-      uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
-      with:
-        load_any: 'True'
-        key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
-
-    - name: Load Homestore Cache
-      uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
-      with:
-        load_any: 'True'
-        key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
-
     - name: Retrieve Dependencies
       uses: actions/checkout@v3
       with:
-        repository: eBay/HomeReplication
-        path: import/home_repl
-        ref: main
+        repository: eBay/HomeStore
+        path: import/homestore
+        ref: master
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
-    - name: Load HomeReplication Cache
+    - name: Load HomeStore Cache
       uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
       with:
         testing: 'False'
-        path: import/home_repl
-        key_prefix: HomeReplDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        path: import/homestore
+        key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
@@ -148,7 +134,7 @@ jobs:
       run: |
         sudo apt-get install -y python3-pyelftools libaio-dev
         python -m pip install pyelftools
-        conan export import/home_repl oss/main
+        conan export import/homestore oss/master
         cached_pkgs=$(ls -1d ~/.conan/data/*/*/*/*/export | sed 's,.*data/,,' | cut -d'/' -f1,2 | paste -sd',' - -)
         echo "::info:: Pre-cached: ${cached_pkgs}"
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
@@ -161,8 +147,6 @@ jobs:
             -o sisl:testing=False \
             -o iomgr:testing=off \
             -o homestore:testing=off \
-            -o nuraft_mesg:testing=False \
-            -o home_replication:testing=False \
             -s build_type=${{ inputs.build-type }} \
             --build missing \
             .
@@ -188,26 +172,12 @@ jobs:
         key_prefix: IOMgrDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
-    - name: Reload NuraftMsg Cache
-      uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
-      with:
-        load_any: 'True'
-        key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-      if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
-
     - name: Reload Homestore Cache
       uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
       with:
-        load_any: 'True'
-        key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-      if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
-
-    - name: Reload HomeRepl Cache
-      uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
-      with:
         testing: 'False'
-        path: import/home_repl
-        key_prefix: HomeReplDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        path: import/homestore
+        key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
@@ -219,8 +189,6 @@ jobs:
             -o sisl:testing=False \
             -o iomgr:testing=off \
             -o homestore:testing=off \
-            -o home_replication:testing=False \
-            -o nuraft_mesg:testing=False \
             -o coverage=True \
             -s build_type=${{ inputs.build-type }} \
             --build missing \
@@ -247,8 +215,6 @@ jobs:
             -o sisl:testing=False \
             -o iomgr:testing=off \
             -o homestore:testing=off \
-            -o nuraft_mesg:testing=False \
-            -o home_replication:testing=False \
             -o homeobject:sanitize=${sanitize} \
             -s build_type=${{ inputs.build-type }} \
             --build missing \
