--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   SislDeps:
-    uses: eBay/sisl/.github/workflows/build_dependencies.yml@stable/v9.x
+    uses: eBay/sisl/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
       platform: ${{ inputs.platform }}
