Do not cover mock

--- a/src/mocks/CMakeLists.txt
+++ b/src/mocks/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 3.11)
 
+add_subdirectory(repl_service)
+
 add_library ("${PROJECT_NAME}_mock")
 target_sources("${PROJECT_NAME}_mock" PRIVATE
 		mock_blob_manager.cpp
@@ -7,8 +9,8 @@ target_sources("${PROJECT_NAME}_mock" PRIVATE
 		mock_shard_manager.cpp
 	)
 target_link_libraries("${PROJECT_NAME}_mock"
+            replication_mock
             ${COMMON_DEPS}
         )
 
-add_subdirectory(repl_service)
 add_subdirectory(tests)
