--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,4 +24,6 @@ include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
 add_subdirectory(lib)
 add_subdirectory(mocks)
-add_subdirectory(tests)
+if(BUILD_TESTING)
+  add_subdirectory(tests)
+endif()
