--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -76,7 +76,7 @@ pipeline {
                 stage("Code Coverage") {
                     steps {
                         slackSend channel: '#sds-ci', message: "*${PROJECT}:${TAG}* is undergoing Code Coverage."
-                        sh """conan install ${DISABLE_DEP_TESTS} -o sisl:prerelease=True -pr debug ${BUILD_MISSING} -o ${PROJECT}:coverage=True .
+                        sh """conan install ${DISABLE_DEP_TESTS} -o ${PROJECT}:testing=True -o sisl:prerelease=True -pr debug ${BUILD_MISSING} -o ${PROJECT}:coverage=True .
                               build-wrapper-linux-x86-64 --out-dir /tmp/sonar conan build .
                               gcovr --exclude-throw-branches --exclude-lines-by-pattern '.*(ENUM|LOG|ASSERT).*' --sonarqube coverage.xml -r ."""
                         withSonarQubeEnv('sds-sonar')  {
@@ -90,7 +90,9 @@ pipeline {
 
         stage("Compile") {
             steps {
-                sh """conan create ${BUILD_MISSING} ${DISABLE_DEP_TESTS} -o sisl:prerelease=True -pr test . ${PROJECT}/${TAG} ;
+                sh """conan create ${BUILD_MISSING} ${DISABLE_DEP_TESTS} -o ${PROJECT}:sanitize=True -o ${PROJECT}:testing=True -o sisl:prerelease=True -pr debug . ${PROJECT}/${TAG} ;
+                      conan remove -f '${PROJECT}*'
+                      conan create ${BUILD_MISSING} ${DISABLE_DEP_TESTS} -o sisl:prerelease=True -pr test . ${PROJECT}/${TAG} ;
                       conan create ${BUILD_MISSING} ${DISABLE_DEP_TESTS} -o sisl:prerelease=True -pr debug . ${PROJECT}/${TAG} ;
                       conan create ${BUILD_MISSING} ${DISABLE_DEP_TESTS} -o sisl:prerelease=False -pr test . ${PROJECT}/${TAG} ;"""
             }
