--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required (VERSION 3.11)
 
+add_flags("-Wno-unused-parameter")
+
 add_library(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE
+		homeobject_impl.cpp
 		blob_manager.cpp
 		shard_manager.cpp
 		pg_manager.cpp
         )
 target_link_libraries(${PROJECT_NAME}
+            replication_mock
             ${COMMON_DEPS}
         )
