Use HomeReplication mock.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,17 +3,23 @@ cmake_minimum_required (VERSION 3.11)
 find_package(Threads QUIET REQUIRED)
 find_package(sisl QUIET REQUIRED)
 find_package(homestore QUIET REQUIRED)
-find_package(nuraft_mesg QUIET REQUIRED)
+find_package(HomeReplication QUIET REQUIRED)
 
 find_package(GTest QUIET REQUIRED)
 
+link_directories(${spdk_LIB_DIRS} ${dpdk_LIB_DIRS})
+link_directories(${home_replication_LIB_DIRS})
+
 set (COMMON_DEPS
+        HomeReplication::mock
         sisl::sisl
     )
 
 set(COMMON_TEST_DEPS
         ${COMMON_DEPS}
-	GTest::gmock
+        GTest::gmock
+        ${spdk_LIBRARY_LIST}
+        ${dpdk_LIBRARY_LIST}
     )
 add_flags("-Wall -Wextra -Werror -Wpedantic")
 
