--- a/src/mocks/tests/CMakeLists.txt
+++ b/src/mocks/tests/CMakeLists.txt
@@ -8,8 +8,7 @@ add_executable (pg_mock_test)
 target_sources(pg_mock_test PRIVATE PGManagerTest.cpp)
 target_link_libraries(pg_mock_test
     homeobject_mock
-    sisl::sisl
-    GTest::gmock
+    ${COMMON_TEST_DEPS}
   )
 add_test(NAME PGMockTest COMMAND pg_mock_test -csv critical)
 
@@ -17,8 +16,7 @@ add_executable (shard_mock_test)
 target_sources(shard_mock_test PRIVATE ShardManagerTest.cpp)
 target_link_libraries(shard_mock_test
     homeobject_mock
-    sisl::sisl
-    GTest::gmock
+    ${COMMON_TEST_DEPS}
   )
 add_test(NAME ShardMockTest COMMAND shard_mock_test -csv critical)
 
@@ -26,7 +24,6 @@ add_executable (blob_mock_test)
 target_sources(blob_mock_test PRIVATE BlobManagerTest.cpp)
 target_link_libraries(blob_mock_test
     homeobject_mock
-    sisl::sisl
-    GTest::gmock
+    ${COMMON_TEST_DEPS}
   )
 add_test(NAME BlobMockTest COMMAND blob_mock_test -csv critical)
