--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -2,14 +2,22 @@ cmake_minimum_required (VERSION 3.11)
 
 add_flags("-Wno-unused-parameter")
 
-add_library(${PROJECT_NAME})
-target_sources(${PROJECT_NAME} PRIVATE
-		homeobject_impl.cpp
+add_library(${PROJECT_NAME}_core OBJECT)
+target_sources(${PROJECT_NAME}_core PRIVATE
 		blob_manager.cpp
 		shard_manager.cpp
 		pg_manager.cpp
         )
+target_link_libraries(${PROJECT_NAME}_core
+            ${COMMON_DEPS}
+        )
+
+
+add_library(${PROJECT_NAME})
+target_sources(${PROJECT_NAME} PRIVATE
+		homeobject_impl.cpp
+        $<TARGET_OBJECTS:${PROJECT_NAME}_core>
+        )
 target_link_libraries(${PROJECT_NAME}
-            replication_mock
             ${COMMON_DEPS}
         )
