--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -107,39 +107,37 @@ jobs:
         key_prefix: IOMgrDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
-    - name: Retrieve Dependencies Raft
-      uses: actions/checkout@v3
-      with:
-        repository: eBay/nuraft_mesg
-        path: import/nuraft_mesg
-        ref: main
-      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
-
     - name: Load NuraftMesg Cache
       uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
       with:
-        testing: 'False'
-        path: import/nuraft_mesg
+        load_any: 'True'
         key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-        fail_on_cache_miss: true
-      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
-
-    - name: Retrieve Dependencies Homestore
-      uses: actions/checkout@v3
-      with:
-        repository: eBay/HomeStore
-        path: import/homestore
-        ref: master
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Load HomeStore Cache
       uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
       with:
-        testing: 'False'
-        path: import/homestore
+        load_any: 'True'
         key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
+
+    - name: Retrieve Dependencies HomeReplication
+      uses: actions/checkout@v3
+      with:
+        repository: eBay/HomeReplication
+        path: import/homerepl
+        ref: master
+      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
+
+    - name: Load HomeReplication Cache
+      uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
+      with:
+        testing: 'False'
+        path: import/homerepl
+        key_prefix: HomeReplDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
+
 
     - name: Setup Conan
       uses: eBay/sisl/.github/actions/setup_conan@stable/v8.x
@@ -151,8 +149,7 @@ jobs:
       run: |
         sudo apt-get install -y python3-pyelftools libaio-dev
         python -m pip install pyelftools
-        conan export import/nuraft_mesg oss/main
-        conan export import/homestore oss/master
+        conan export import/homerepl oss/main
         cached_pkgs=$(ls -1d ~/.conan/data/*/*/*/*/export | sed 's,.*data/,,' | cut -d'/' -f1,2 | paste -sd',' - -)
         echo "::info:: Pre-cached: ${cached_pkgs}"
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
@@ -166,6 +163,7 @@ jobs:
             -o iomgr:testing=off \
             -o homestore:testing=off \
             -o nuraft_mesg:testing=False \
+            -o home_replication:testing=False \
             -s build_type=${{ inputs.build-type }} \
             --build missing \
             .
@@ -194,18 +192,21 @@ jobs:
     - name: Reload NuRaftMesg Cache
       uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
       with:
-        testing: 'False'
-        path: import/nuraft_mesg
+        load_any: 'True'
         key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-        fail_on_cache_miss: true
-      if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
-    - name: Reload Homestore Cache
+    - name: Reload HomeStore Cache
+      uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
+      with:
+        load_any: 'True'
+        key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+
+    - name: Reload HomeReplication Cache
       uses: eBay/sisl/.github/actions/load_conan@stable/v8.x
       with:
         testing: 'False'
-        path: import/homestore
-        key_prefix: HomestoreDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        path: import/homerepl
+        key_prefix: HomeReplDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
@@ -218,6 +219,7 @@ jobs:
             -o iomgr:testing=off \
             -o homestore:testing=off \
             -o nuraft_mesg:testing=False \
+            -o home_replication:testing=False \
             -o coverage=True \
             -o testing=True \
             -s build_type=${{ inputs.build-type }} \
@@ -246,6 +248,7 @@ jobs:
             -o iomgr:testing=off \
             -o homestore:testing=off \
             -o nuraft_mesg:testing=False \
+            -o home_replication:testing=False \
             -o homeobject:sanitize=${sanitize} \
             -o homeobject:testing=True \
             -s build_type=${{ inputs.build-type }} \
