--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -15,6 +15,9 @@ on:
       prerelease:
         required: true
         type: string
+      tooling:
+        required: true
+        type: string
 
 jobs:
   SislDeps:
@@ -25,17 +28,9 @@ jobs:
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
       prerelease: ${{ inputs.prerelease }}
+      tooling: None
     if: ${{ github.event_name != 'pull_request' }}
-  IOMgrDeps:
-    needs: SislDeps
-    uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
-    with:
-      branch: master
-      platform: ${{ inputs.platform }}
-      build-type: ${{ inputs.build-type }}
-      malloc-impl: ${{ inputs.malloc-impl }}
-      prerelease: ${{ inputs.prerelease }}
-    if: ${{ github.event_name != 'pull_request' }}
+
   NuRaftMesgDeps:
     needs: SislDeps
     uses: eBay/nuraft_mesg/.github/workflows/build_dependencies.yml@main
@@ -45,8 +40,22 @@ jobs:
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
       prerelease: ${{ inputs.prerelease }}
+      tooling: None
     if: ${{ github.event_name != 'pull_request' }}
-  HomestoreDeps:
+
+  IOMgrDeps:
+    needs: SislDeps
+    uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
+    with:
+      branch: master
+      platform: ${{ inputs.platform }}
+      build-type: ${{ inputs.build-type }}
+      malloc-impl: ${{ inputs.malloc-impl }}
+      prerelease: ${{ inputs.prerelease }}
+      tooling: None
+    if: ${{ github.event_name != 'pull_request' }}
+
+  HomeStoreDeps:
     needs: IOMgrDeps
     uses: eBay/homestore/.github/workflows/build_dependencies.yml@master
     with:
@@ -55,9 +64,11 @@ jobs:
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
       prerelease: ${{ inputs.prerelease }}
+      tooling: None
     if: ${{ github.event_name != 'pull_request' }}
+
   HomeReplDeps:
-    needs: [HomestoreDeps, NuRaftMesgDeps]
+    needs: [HomeStoreDeps, NuRaftMesgDeps]
     uses: eBay/homereplication/.github/workflows/build_dependencies.yml@main
     with:
       branch: main
@@ -65,7 +76,9 @@ jobs:
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
       prerelease: ${{ inputs.prerelease }}
+      tooling: None
     if: ${{ github.event_name != 'pull_request' }}
+
   HomeObjectDeps:
     needs: [HomeReplDeps]
     uses: ./.github/workflows/build_dependencies.yml
@@ -75,6 +88,7 @@ jobs:
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
       prerelease: ${{ inputs.prerelease }}
+      tooling: ${{ inputs.tooling }}
       testing: 'True'
     if: ${{ github.event_name != 'pull_request' }}
   HomeObjectBuild:
@@ -85,5 +99,6 @@ jobs:
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
       prerelease: ${{ inputs.prerelease }}
+      tooling: ${{ inputs.tooling }}
       testing: 'True'
     if: ${{ github.event_name == 'pull_request' }}
