--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -19,6 +19,10 @@ on:
       prerelease:
         required: true
         type: string
+      tooling:
+        required: false
+        type: string
+        default: 'None'
       testing:
         required: false
         type: string
@@ -60,6 +64,13 @@ on:
           - 'True'
           - 'False'
         default: 'False'
+      tooling:
+        required: false
+        type: choice
+          - 'Sanitize'
+          - 'Coverage'
+          - 'None'
+        default: 'None'
       testing:
         description: 'Build and Run'
         required: true
@@ -164,6 +175,7 @@ jobs:
             -o homestore:testing=off \
             -o nuraft_mesg:testing=False \
             -o home_replication:testing=False \
+            -o testing=False\
             -s build_type=${{ inputs.build-type }} \
             --build missing \
             .
@@ -210,6 +222,24 @@ jobs:
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
+    - name: Create and Test Package
+      run: |
+        sanitize=$([[ "${{ inputs.tooling }}" == "Sanitize" ]] && echo "True" || echo "False")
+        conan create \
+            -o sisl:prerelease=${{ inputs.prerelease }} \
+            -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
+            -o sisl:testing=False \
+            -o iomgr:testing=off \
+            -o homestore:testing=off \
+            -o nuraft_mesg:testing=False \
+            -o home_replication:testing=False \
+            -o homeobject:sanitize=${sanitize} \
+            -o homeobject:testing=True \
+            -s build_type=${{ inputs.build-type }} \
+            --build missing \
+            .
+      if: ${{ inputs.testing == 'True' && inputs.tooling != 'Coverage' }}
+
     - name: Code Coverage Run
       run: |
         conan install \
@@ -226,32 +256,11 @@ jobs:
             --build missing \
             .
         conan build .
-      if: ${{ inputs.testing == 'True' && inputs.platform == 'ubuntu-22.04' && inputs.build-type == 'Debug' && inputs.malloc-impl == 'libc' && inputs.prerelease == 'False' }}
+      if: ${{ inputs.testing == 'True' && inputs.tooling == 'Coverage' }}
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         gcov: true
-      if: ${{ inputs.testing == 'True' && inputs.platform == 'ubuntu-22.04' && inputs.build-type == 'Debug' && inputs.malloc-impl == 'libc' && inputs.prerelease == 'False' }}
-
-    - name: Create and Test Package
-      run: |
-        sanitize=$([[ "${{ inputs.build-type }}" == "Debug" && \
-                      "${{ inputs.malloc-impl }}" == "libc" && \
-                      "${{ inputs.prerelease }}" == "True" ]] && \
-                          echo "True" || echo "False")
-        conan create \
-            -o sisl:prerelease=${{ inputs.prerelease }} \
-            -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
-            -o sisl:testing=False \
-            -o iomgr:testing=off \
-            -o homestore:testing=off \
-            -o nuraft_mesg:testing=False \
-            -o home_replication:testing=False \
-            -o homeobject:sanitize=${sanitize} \
-            -o homeobject:testing=True \
-            -s build_type=${{ inputs.build-type }} \
-            --build missing \
-            .
-      if: ${{ inputs.testing == 'True' && ( inputs.platform != 'ubuntu-22.04' || inputs.build-type != 'Debug' || inputs.malloc-impl != 'libc' || inputs.prerelease != 'False' ) }}
+      if: ${{ inputs.testing == 'True' && inputs.tooling == 'Coverage' }}
