--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -10,7 +10,7 @@ link_directories(${spdk_LIB_DIRS} ${dpdk_LIB_DIRS})
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-target_link_libraries(${PROJECT_NAME} HomeObject::mock
+target_link_libraries(${PROJECT_NAME} HomeObject::memory
         ${spdk_LIBRARY_LIST}
         ${dpdk_LIBRARY_LIST}
         )
