--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,5 +4,5 @@ codecov:
 
 ignore:
   - "**/*_generated.h"
-  - "src/tests/**"
-  - "src/mocks/tests/**"
+  - "src/lib/homestore/tests/**"
+  - "src/lib/memory/tests/**"
