--- a/src/lib/homestore/tests/CMakeLists.txt
+++ b/src/lib/homestore/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories (BEFORE .)
 add_executable(test_home_object)
 target_sources(test_home_object PRIVATE test_home_object.cpp)
 target_link_libraries(test_home_object
-            homeobject
+            homeobject_homestore
             ${COMMON_TEST_DEPS}
         )
 add_test(NAME HomeObject COMMAND ${CMAKE_BINARY_DIR}/bin/test_home_object)
