--- a/src/lib/homestore/CMakeLists.txt
+++ b/src/lib/homestore/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources("${PROJECT_NAME}_homestore" PRIVATE
 		homeobject.cpp
 		blob_manager.cpp
 		shard_manager.cpp
+		replication_state_machine.cpp
         $<TARGET_OBJECTS:${PROJECT_NAME}_core>
 	)
 target_link_libraries("${PROJECT_NAME}_homestore"
