--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 3.11)
 find_package(Threads QUIET REQUIRED)
 find_package(sisl QUIET REQUIRED)
 find_package(homestore QUIET REQUIRED)
-find_package(HomeReplication QUIET REQUIRED)
+find_package(nuraft_mesg QUIET REQUIRED)
 
 find_package(GTest QUIET REQUIRED)
 
@@ -11,11 +11,13 @@ link_directories(${spdk_LIB_DIRS} ${dpdk_LIB_DIRS})
 link_directories(${home_replication_LIB_DIRS})
 
 set (COMMON_DEPS
-        HomeReplication::mock
+        homestore::homestore
+        nuraft_mesg::nuraft_mesg
         sisl::sisl
     )
 
 set(COMMON_TEST_DEPS
+        home_replication_mock
         ${COMMON_DEPS}
         GTest::gmock
         ${spdk_LIBRARY_LIST}
@@ -29,3 +31,4 @@ include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
 add_subdirectory(lib)
+add_subdirectory(mocks)
